# online_university

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  settings.py~  urls.py
education/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/management/commands/: create_payment.py
education/migrations/: 0001_initial.py  0002_lesson.py  0003_lesson_course.py  0004_payment.py  0005_course_owner_lesson_owner.py  0006_subscription.py  0007_payment_stripe_id.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
